add classes to button & styles for those classes

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </div>
 
         <div class="play-options flex">
-            <button class="btn">Place Bet</button>
+            <button class="btn" id="placeBet-btn">Place Bet</button>
             <div class="options">
-                <button class="btn">Hit</button>
-                <button class="btn">Double</button>
+                <button class="btn disabled" id="hit-btn" disabled>Hit</button>
+                <button class="btn disabled" id="double-btn" disabled>Double</button>
             </div>
         </div>
 
