add javascript functionality for game and buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="flex">
-        <p class="balance">Balance: <span id="player-balance">$100</span></p>
+        <p class="balance">Balance: $<span id="player-balance">100</span></p>
     </header>
     <main class="container flex">
 
