add game logic and event handlers for each button

--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
         <div class="cards-container">
             <div class="dealer">
                 <div class="cards flex" id="dealer-cards">
+                    <div class="card-back">
+                        <img src="images/card-back.png" alt="backface of a card">
+                    </div>
                     <p class="card-total" id="dealer-total"></p>
                 </div>
             </div>
 
             <div class="player">
                 <div class="cards flex" id="player-cards">
+                    <div class="card-back">
+                        <img src="images/card-back.png" alt="backface of a card">
+                    </div>
                     <p class="card-total" id="player-total"></p>
                 </div>
             </div>
